apps/mealie/deployment-mealie.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mealie
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      automountServiceAccountToken: false  # CKV_K8S_38
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.8.0@sha256:63aef46d90975d9cf9c0fdb9399fc2fe36acd222e1db6be99c504b9ccdbee967  # CKV_K8S_43
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"  # CKV_K8S_12
              cpu: "300m"  # CKV_K8S_10
            limits:
              memory: "512Mi"  # CKV_K8S_13
              cpu: "1000m"  # CKV_K8S_11
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:  # CKV_K8S_8
            httpGet:
              path: /login
              port: http
          readinessProbe:  # CKV_K8S_9
            httpGet:
              path: /login
              port: http
          startupProbe:
            httpGet:
              path: /login
              port: http
            failureThreshold: 30
            periodSeconds: 10
          securityContext:  # CKV_K8S_30
            allowPrivilegeEscalation: false  # CKV_K8S_20
            capabilities:
              drop:
                - ALL  # CKV_K8S_37
            readOnlyRootFilesystem: true  # CKV_K8S_22
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /app/nltk_data
              name: nltk-data
            - mountPath: /run/secrets/oidc-client
              name: oidc-client
              readOnly: true
            - mountPath: /run/secrets/openai
              name: openai
              readOnly: true
      securityContext:
        fsGroup: 911
        runAsNonRoot: true
        runAsUser: 911
        runAsGroup: 911
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie
        - name: nltk-data
          emptyDir: {}
        - name: oidc-client
          secret:
            secretName: oidc-client
        - name: openai
          secret:
            secretName: openai
