apps/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.11.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          volumeMounts:
            - mountPath: /app/data
              name: data
      securityContext:
        fsGroup: 911
        runAsNonRoot: true
        runAsUser: 911
        runAsGroup: 911
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie
