apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: mealie
