apps/mealie/httproute-mealie.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: mealie
  name: mealie
spec:
  parentRefs:
    - namespace: cilium
      name: jdmarble-net
  hostnames:
    - "mealie.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 80
